updated image scaling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     
-    <div class="container-fluid d-flex justify-content-lg-evenly align-center my-5 pb-5 row">
+    <div class="container-fluid d-flex justify-content-lg-evenly align-center ms-5 me-5 mt-5 mb-5 row">
         <div class="container d-flex flex-column col-12 col-md-4 ">
           <img src="./images/man-woman.jpeg" class="imageA img-fluid rounded-3 column-gap-5 position-relative"alt="a man and woman"/>
   
@@ -83,20 +83,20 @@
         <div class="container d-flex flex-column col-12 col-md-4">
           <img
             src="./images/decor.jpeg"
-            class="imageB rounded-3 column-gap-5 position-relative"
-            alt="..."/>
+            class="imageB img-fluid rounded-3 column-gap-5 position-relative"
+            alt="decor"/>
   
-          <div class="container-fluid position-relative col-md-3 d-none d-md-block">
-            <span
-              class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100"
-              >For decors</span>
-          </div>
+            <div class="container-fluid position-relative">
+                <span
+                  class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100"
+                  >For offices</span >
+            </div>
         </div>
         <div class="container d-flex flex-column col-12 col-md-4">
           <img
             src="./images/black-woman.jpeg"
             class="imageC rounded-3 column-gap-5 position-relative"
-            alt="..." />
+            alt="black woman" />
   
           <div class="container-fluid position-relative">
             <span
@@ -106,15 +106,15 @@
         </div>
     </div>
 
-    <div class="pic container-fluid d-flex justify-content-lg-evenly align-center my-5 pb-5 row">
-        <div class="container d-flex flex-column col-12 col-md-4 ">
-            <img class="p1 " src="./images/top.png">
+    <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
+        <div class="col-12 col-md-6">
+            <img class="p1 ms-4 img-fluid" src="./images/top.png">
         </div>
-        <div class="col-12 col-md-4 ">
+        <div class="col-12 col-md-6">
             <img class="p2 img-fluid rounded-5 mt-5" src="./images/laptop-girl.png">
         </div>
     </div>
-    <div class="pictures d-flex justify-content-between align-center mt-5 row">
+    <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
         <div class="col-12 col-md-6">
             <img class="pi1 ms-4 img-fluid rounded-5" src="./images/team.png">
         </div>
