updated html and css

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
     </div>
     
-    <div class="container-fluid d-flex justify-content-lg-evenly align-center ms-5 me-5 mt-5 mb-5 row">
-        <div class="container d-flex flex-column col-12 col-md-4 ">
+    <div class="container-fluid d-flex justify-content-lg-evenly align-center ms-3 width-100% mt-5 row">
+        <div class="container d-flex flex-column col-12 col-md-4 mt-5">
           <img src="./images/man-woman.jpeg" class="imageA img-fluid rounded-3 column-gap-5 position-relative"alt="a man and woman"/>
   
           <div class="container-fluid position-relative">
@@ -80,19 +80,14 @@
               >For offices</span >
           </div>
         </div>
-        <div class="container d-flex flex-column col-12 col-md-4">
-          <img
-            src="./images/decor.jpeg"
-            class="imageB img-fluid rounded-3 column-gap-5 position-relative"
-            alt="decor"/>
+        <div class="container d-flex flex-column col-12 col-md-4 mt-5">
+          <img src="./images/decor.jpeg" class="imageB img-fluid rounded-3 column-gap-5 position-relative"alt="decor"/>
   
             <div class="container-fluid position-relative">
-                <span
-                  class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100"
-                  >For offices</span >
+                <span class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100">For offices</span >
             </div>
         </div>
-        <div class="container d-flex flex-column col-12 col-md-4">
+        <div class="container d-flex flex-column col-12 col-md-4 mt-5">
           <img
             src="./images/black-woman.jpeg"
             class="imageC rounded-3 column-gap-5 position-relative"
@@ -100,30 +95,31 @@
   
           <div class="container-fluid position-relative">
             <span
-              class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100"
-              >For homes</span>
+              class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100">For homes
+            </span>
+              
           </div>
         </div>
     </div>
 
     <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
         <div class="col-12 col-md-6">
-            <img class="p1 ms-4 img-fluid" src="./images/top.png">
+            <img class="p1 img-fluid" src="./images/top.png">
         </div>
         <div class="col-12 col-md-6">
-            <img class="p2 img-fluid rounded-5 mt-5" src="./images/laptop-girl.png">
+            <img class="p2 img-fluid rounded-5 mt-5 me-5" src="./images/laptop-girl.png">
         </div>
     </div>
     <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
         <div class="col-12 col-md-6">
-            <img class="pi1 ms-4 img-fluid rounded-5" src="./images/team.png">
+            <img class="pi1 img-fluid rounded-5 me-5" src="./images/team.png">
         </div>
         <div class="col-12 col-md-6">
             <img class="pi2 img-fluid" src="./images/top.png">
         </div>
     </div>
 
-    <div class="container-fluid mt-5 justify-content-start row">
+    <div class="container-fluid mt-5 ms-5 justify-content-start row">
             <div class="blog fw-bolder">
                 <ul>
                     <li class="">Blog</li>
@@ -145,23 +141,23 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid mt-5 ms-5 justify-content-start">
+    <div class="container-fluid mt-5 width-100%">
         <div class="content justify-content-evenly">
-            <img src="./images/Blog-Content.png" class="img-fluid me-5">
+            <img src="./images/Blog-Content.png" class="img-fluid">
         </div>
     </div>
     <div class="container text-center mt-5">
         <h2 class="mb-4 text-dark display-2 fw-bold">Our commitment to efficient SaaS <br> templates paves the way for startups</h2>
         <button class="G text-light fs-1 mt-4">Get in touch</button>
     </div>
-    <div class="container-fluid mt-5 ms-5">
+    <div class="container-fluid mt-5 ms-2 me-4 width-100%">
         <div class="merged justify-content-center">
             <img src="./images/Images.png" class="img-fluid">
         </div>
     </div>
     <div class="container-lg">
         <div class="footer mt-5 row justify-content-center">
-            <div class="box d-flex rounded-4">
+            <div class="box d-flex rounded-4 width-100%">
                 <div>
                     <h2 class="display-2 fw-bolder py-5 ps-5 text-light">Get subscribed to our<br> engaging newsletter</h2>
                 </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -174,7 +170,7 @@
                     <form>
                         <input class="in ms-5" type="password" placeholder="Your e-mail...">&nbsp;&nbsp;&nbsp;&nbsp;
                     </form>
-                    <button class="getin  ">Get in touch</button>
+                    <button class="getin">Get in touch</button>
                 </div>
             </div>
             <div class="box2 d-flex justify-content-evenly align-center mt-5 me-5">
