--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="./images/lady-with-glasses.jpeg" class="img-fluid rounded-4" alt="lady-with-glasses">
     </div>
     <div class="container-fluid d-flex justify-content-between align-items-center mt-5 mb-5">
-        <div class="col-md-10 text-start text-md-start me-3">
+        <div class="col-md-10 text-start text-md-start">
             <h2 class="create ms-5">Create effective hero blocks</h2>
         </div>
         <div class="container-fluid d-flex col-md-2">
@@ -70,28 +70,25 @@
         </div>
     </div>
     
-    <div class="container-fluid d-flex justify-content-lg-evenly align-center ms-3 width-100% mt-5 row">
-        <div class="container d-flex flex-column col-12 col-md-4 mt-5">
+    <div class="container-fluid d-flex justify-content-lg-evenly align-center width-100% pt-3 pe-5 row">
+        <div class="container d-flex flex-column col-12 col-md-4 ps-5 pt-5">
           <img src="./images/man-woman.jpeg" class="imageA img-fluid rounded-3 column-gap-5 position-relative"alt="a man and woman"/>
   
           <div class="container-fluid position-relative">
             <span
-              class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100"
+              class="satoshi-medium text-dark fs-2 ps-4 pb-5 text-white position-absolute bottom-100"
               >For offices</span >
           </div>
         </div>
         <div class="container d-flex flex-column col-12 col-md-4 mt-5">
-          <img src="./images/decor.jpeg" class="imageB img-fluid rounded-3 column-gap-5 position-relative"alt="decor"/>
+          <img src="./images/decor.jpeg" class="imageB img-fluid rounded-3 column-gap-5 position-relative "alt="decor"/>
   
             <div class="container-fluid position-relative">
-                <span class="satoshi-medium text-dark fs-2 ms-4 mb-5 text-white position-absolute bottom-100">For offices</span >
+                <span class="satoshi-medium text-dark fs-2 ps-4 pb-5 text-white position-absolute bottom-100">For offices</span >
             </div>
         </div>
         <div class="container d-flex flex-column col-12 col-md-4 mt-5">
-          <img
-            src="./images/black-woman.jpeg"
-            class="imageC rounded-3 column-gap-5 position-relative"
-            alt="black woman" />
+          <img src="./images/black-woman.jpeg" class="imageC rounded-3 column-gap-5 position-relative" alt="black woman" />
   
           <div class="container-fluid position-relative">
             <span
@@ -102,42 +99,42 @@
         </div>
     </div>
 
-    <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
+    <div class="pictures container-fluid d-flex justify-content-between align-center pt-5 ps-5  row">
         <div class="col-12 col-md-6">
             <img class="p1 img-fluid" src="./images/top.png">
         </div>
         <div class="col-12 col-md-6">
-            <img class="p2 img-fluid rounded-5 mt-5 me-5" src="./images/laptop-girl.png">
+            <img class="p2 img-fluid rounded-5 mt-5" src="./images/laptop-girl.png">
         </div>
     </div>
-    <div class="pictures d-flex justify-content-between align-center mt-5 ms-5 row">
+    <div class="pictures container-fluid d-flex justify-content-between align-center pt-5 ps-5 row">
         <div class="col-12 col-md-6">
-            <img class="pi1 img-fluid rounded-5 me-5" src="./images/team.png">
+            <img class="pi1 img-fluid rounded-5" src="./images/team.png">
         </div>
         <div class="col-12 col-md-6">
             <img class="pi2 img-fluid" src="./images/top.png">
         </div>
     </div>
 
-    <div class="container-fluid mt-5 ms-5 justify-content-start row">
+    <div class="container-fluid mt-5 ps-5 justify-content-start row">
             <div class="blog fw-bolder">
                 <ul>
-                    <li class="">Blog</li>
+                    <li>Blog</li>
                 </ul>
                 <hr width="100%" size="2">
             </div>
     </div>
-    <div class="container-fluid d-flex row ms-5">
-        <div class="learn row justify-content-start d-flex align-center grid gap-0 column-gap-5">
-            <div class="l1 col-md-8 mt-5 text-md-start">
+    <div class="container-fluid d-flex row ps-5">
+        <div class=" container row justify-content-start d-flex align-center grid gap-0 column-gap-5">
+            <div class="l1 col-md-8 pt-5 text-md-start">
                 <h2 class="l2 text-dark display-2 fw-bolder">Learn more from our blog</h2>
                 <p class="l3 text-muted display-6">Our team boasts top green energy experts, driving innovation in sustainability.</p>
             </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-            <div class="col-md-2 mt-5 justify-content-end">
-                <a href="all" class="al btn mt-5 ms-5  btn-lg border border-2 border-dark rounded-pill rounded-3 ">See all</a>
+            <div class="col-md-2 pt-5 justify-content-end">
+                <a href="all" class="al btn p-4 btn-lg border border-2 border-dark rounded-pill rounded-3 ">See all</a>
             </div>
         </div>
     </div>
@@ -150,34 +147,27 @@
         <h2 class="mb-4 text-dark display-2 fw-bold">Our commitment to efficient SaaS <br> templates paves the way for startups</h2>
         <button class="G text-light fs-1 mt-4">Get in touch</button>
     </div>
-    <div class="container-fluid mt-5 ms-2 me-4 width-100%">
+    <div class="container-fluid pt-5 ps-2 pe-4 width-100%">
         <div class="merged justify-content-center">
             <img src="./images/Images.png" class="img-fluid">
         </div>
     </div>
     <div class="container-lg">
-        <div class="footer mt-5 row justify-content-center">
-            <div class="box d-flex rounded-4 width-100%">
-                <div>
+        <div class="footer pt-5 row justify-content-center">
+            <div class="box d-flex rounded-4 width-100% pt-5">  
                     <h2 class="display-2 fw-bolder py-5 ps-5 text-light">Get subscribed to our<br> engaging newsletter</h2>
-                </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div class="fb d-flex justify-content-end align-items-center">
+                <div class="fb d-flex justify-content-end align-items-center col-md-6">
                     <form>
-                        <input class="in ms-5" type="password" placeholder="Your e-mail...">&nbsp;&nbsp;&nbsp;&nbsp;
+                        <input class="in ps-5" type="password" placeholder="Your e-mail...">&nbsp;&nbsp;&nbsp;&nbsp;
                     </form>
                     <button class="getin">Get in touch</button>
                 </div>
             </div>
-            <div class="box2 d-flex justify-content-evenly align-center mt-5 me-5">
-                <div class="flogo mt-5">
+            <div class="box2 d-flex justify-content-evenly align-center pt-5 pe-5 ">
+                <div class="flogo pt-5">
                     <img src="./images/logo.jpg">
                 </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div class="tab mt-5">  
+                <div class="tab container pt-5">  
                     <table class="fs-4">
                         <tr class="text-dark">
                         <th>Platform</th>
@@ -201,28 +191,28 @@
                         </tr> 
                     </table>                  
                 </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div class="col-md-3 mt-5">
+                <div class=" d-md-block col-md-3 pt-5">
                     <ul class="list-unstyled flex-">
                         <li class="d-flex justify-content-center align-center">
                             <img src="./images/fIcon.png" class="img-fluid" alt="facebook icon">
-                            <h3><i class="bi bi-facebook me-2 text-decoration-none"></i>Follow us on Facebook</h5>
+                            <h3><i class="bi bi-facebook pe-2 text-decoration-none"></i>Follow us on Facebook</h5>
                         </li><br>
-                        <li class="d-flex justify-content-center align-center ms-2">
+                        <li class="d-flex justify-content-center align-center ps-2">
                             <img src="./images/Igcon.png" class="img-fluid" alt="Instagram icon">
-                            <h3><i class="bi bi-instagram me-2 text-decoration-none"></i> Follow us on Instagram</h3>
+                            <h3><i class="bi bi-instagram pe-2 text-decoration-none"></i> Follow us on Instagram</h3>
                         </li><br>
                         <li class="d-flex justify-content-center align-center">
                             <img src="./images/Licon.png" class="img-fluid" alt="LinkedIn icon">
-                            <h3><i class="bi bi-linkedin me-2"></i>Follow us on LinkedIn</h3>
+                            <h3><i class="bi bi-linkedin pe-2"></i>Follow us on LinkedIn</h3>
                         </li>
                     </ul>
                 </div>
 
             </div>
-            <div class="end text-center text-muted mt-5">
+            <div class="end text-center text-muted pt-5">
                 <P>© 2024 Klovax. All rights reserved.</P>
             </div>
         </div>  
-    </div>
+    </div> 
 </body>
 </html>
