--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>bootstrap project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="ccaproject.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-body ms-5 mt-5">
@@ -37,7 +38,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <li class="nav-item d-none d-md-inline ms-5">
-                        <a class="Ge btn btn-lg" href="#contact">Get in Touch</a>
+                        <a class="Ge btn btn-lg btn-success py-4 px=3" href="#contact">Get in Touch</a>
                     </li>
                 </ul>
             </div>
@@ -163,7 +164,7 @@
                     <button class="getin">Get in touch</button>
                 </div>
             </div>
-            <div class="box2 d-flex justify-content-evenly align-center pt-5 pe-5 ">
+            <div class="box2 d-flex justify-content-evenly align-center pt-5">
                 <div class="flogo pt-5">
                     <img src="./images/logo.jpg">
                 </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -191,19 +192,19 @@
                         </tr> 
                     </table>                  
                 </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div class=" d-md-block col-md-3 pt-5">
-                    <ul class="list-unstyled flex-">
+                <div class=" d-md-block col-md-3 d-none pt-5">
+                    <ul class="list-unstyled flex-column ">
                         <li class="d-flex justify-content-center align-center">
                             <img src="./images/fIcon.png" class="img-fluid" alt="facebook icon">
-                            <h3><i class="bi bi-facebook pe-2 text-decoration-none"></i>Follow us on Facebook</h5>
+                            <h3><i class="bi bi-facebook text-decoration-none"></i>Follow us on Facebook</h5>
                         </li><br>
                         <li class="d-flex justify-content-center align-center ps-2">
                             <img src="./images/Igcon.png" class="img-fluid" alt="Instagram icon">
-                            <h3><i class="bi bi-instagram pe-2 text-decoration-none"></i> Follow us on Instagram</h3>
+                            <h3><i class="bi bi-instagram text-decoration-none"></i> Follow us on Instagram</h3>
                         </li><br>
                         <li class="d-flex justify-content-center align-center">
                             <img src="./images/Licon.png" class="img-fluid" alt="LinkedIn icon">
-                            <h3><i class="bi bi-linkedin pe-2"></i>Follow us on LinkedIn</h3>
+                            <h3><i class="bi bi-linkedin"></i>Follow us on LinkedIn</h3>
                         </li>
                     </ul>
                 </div>
